--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,67 @@
-.App {
+body {
+  background: #eeeeee;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: repeat(10 1fr, minmax(100px, 1fr));
+  /* grid-template-areas:
+    "nav cards"
+    "nav cards"; */
+}
+
+.navbar {
+  /* grid-area: nav; */
+  max-width: 100%;
+  display: grid;
+  grid-template-rows: repeat(10 1fr, minmax(100px, 1fr));
+
+  /* overflow: hidden; */
+  writing-mode: vertical-rl;
+  text-orientation: sideways;
+  border-radius: 10px;
+  -webkit-box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
+  box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
+  height: 100%;
+}
+
+.clock {
+}
+
+.cards {
+  /* grid-area: cards; */
+  width: 95%;
+  height: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 5px;
+}
+
+.card {
   text-align: center;
+
+  /* width: 50%; */
+  margin: 0 auto;
+  text-align: center;
+  /* overflow: hidden; */
+
+  border: 1px solid #ffffff;
+  height: auto;
+  width: auto;
+  /* float: left; */
+
+  -webkit-box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
+  box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
+  padding: 5px;
+  background-color: #eeeeee;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 400px));
+  grid-gap: 10px;
+  border-radius: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card > iframe {
+  max-width: 100%;
 }
