--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,29 @@ body {
 }
 
 .main {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 50px 1fr;
-  grid-template-rows: repeat(10 1fr, minmax(100px, 1fr));
+  grid-template-rows: repeat(10 1fr, minmax(100px, 1fr)); */
   /* grid-template-areas:
     "nav cards"
     "nav cards"; */
 }
 
 .navbar {
+  float: left;
+  position: relative;
   /* grid-area: nav; */
   max-width: 100%;
-  display: grid;
-  grid-template-rows: repeat(10 1fr, minmax(100px, 1fr));
+  /* display: grid;
+  grid-template-rows: repeat(10 1fr, minmax(100px, 1fr)); */
 
   /* overflow: hidden; */
   writing-mode: vertical-rl;
   text-orientation: sideways;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   -webkit-box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
   box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
-  height: 100%;
+  height: 100vh;
 }
 
 .clock {
@@ -31,7 +33,7 @@ body {
 
 .cards {
   /* grid-area: cards; */
-  width: 95%;
+  width: 80%;
   height: 100%;
   margin: 0 auto;
   display: grid;
@@ -48,7 +50,7 @@ body {
   /* overflow: hidden; */
 
   border: 1px solid #ffffff;
-  height: auto;
+  height: 50vh;
   width: auto;
   /* float: left; */
 
@@ -59,9 +61,10 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 400px));
   grid-gap: 10px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 .card > iframe {
   max-width: 100%;
+  max-height: 100%;
 }
