--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ body {
   /* float: left; */
   height: fit-content;
   width: fit-content;
+  max-width: fit-content;
 
   /* -webkit-box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
   box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69); */
@@ -104,4 +105,9 @@ body {
 .tube {
   text-align: left;
   border: 1px solid #494949;
+}
+
+.navWeather {
+  grid-row: 2;
+  margin-left: 20px;
 }
