--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ body {
 .quote {
   position: absolute;
   bottom: 15px;
-  margin-left: 10px;
+  margin-left: 15.5%;
   font-family: "Playfair Display", serif;
   font-size: 2.5vh;
   font-weight: bold;
