--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,13 @@ body {
 }
 
 .main {
-  border: 1px solid #c70000;
+  border: 1px solid #0003c7;
   display: grid;
-  grid-template-columns: 200px 1fr;
-  height: 100vh;
-  max-height: 100vh;
-  max-width: 100vh;
-  width: 100vh;
+  grid-template-columns: 215px 1fr;
+  height: 99vh;
+  max-height: 99vh;
+  max-width: 99%;
+  width: 99%;
   /* overflow: hidden; */
   /* grid-template-areas:
     "nav cards"
@@ -56,36 +56,41 @@ body {
   grid-row: 10;
   text-align: center;
 
-  font-size: 3vh;
+  font-size: 2.8vh;
   white-space: pre-line;
   line-height: 4.5vh;
 }
 
 .navWeather {
   grid-row: 2;
-  margin-left: 20px;
+  margin-left: 15px;
   white-space: pre-line;
+  font-size: 2vh;
+  line-height: 1.8vh;
 }
 
 /* ALL CARDS */ /* ALL CARDS */ /* ALL CARDS */ /* ALL CARDS */ /* ALL CARDS */ /* ALL CARDS */ /* ALL CARDS */ /* ALL CARDS */ /* ALL CARDS */
 
 .cards {
-  border: 1px solid #494949;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  align-items: stretch;
-
-  /* grid-area: cards; */
-  width: 99%;
-  max-width: 99%;
-  margin: 0 auto;
-  /* display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 5px; */
-  height: 90%;
-  max-height: 100vh;
+  border: 1px solid #ff0000;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  width: 111vh;
+  height: 92vh;
+  max-width: 111vh;
+  max-height: 92vh;
+  grid-template-areas:
+    " t t t n n n c c c c"
+    " t t t n n n c c c c"
+    " t t t n n n c c c c"
+    " t t t n n n c c c c"
+    " w w w v v v c c c c"
+    " w w w v v v c c c c"
+    " w w w v v v c c c c"
+    " w w w v v v c c c c"
+    " g g g to to to to to to to"
+    " s s s s s s s s s s ";
 }
 
 .card {
@@ -97,20 +102,15 @@ body {
   /* overflow: hidden; */
 
   border: 1px solid #494949;
-  /* height: 40vh; */
-  /* width: 100%; */
-  /* float: left; */
+
   height: fit-content;
   width: fit-content;
   max-width: fit-content;
-
-  /* -webkit-box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69);
-  box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.69); */
   padding: 5px;
   background: #000000;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 400px));
-  grid-gap: 10px;
+  grid-gap: 5px;
   /* border-radius: 10px; */
 }
 
@@ -127,18 +127,20 @@ body {
 }
 
 .weather {
+  grid-area: w;
   width: fit-content;
   border: 1px solid #242424;
   padding: 5px;
 
-  animation: fadeIn ease 3s;
-  -webkit-animation: fadeIn ease 3s;
-  -moz-animation: fadeIn ease 3s;
-  -o-animation: fadeIn ease 3s;
-  -ms-animation: fadeIn ease 3s;
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
 }
 
 .tube {
+  grid-area: t;
   font-size: 15px;
   text-align: justify;
   width: fit-content;
@@ -168,8 +170,11 @@ body {
 }
 
 .video {
-  border: 1px solid #494949;
-  width: 50%;
+  grid-area: v;
+  /* padding: 5px; */
+  /* border: 1px solid #494949; */
+  width: 100%;
+  height: 100%;
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
   -moz-animation: fadeIn ease 3s;
@@ -178,30 +183,29 @@ body {
 }
 
 .videoFull {
-  position: fixed;
-  border: 1px solid #494949;
-  width: 84%;
-  top: 0%;
-  left: 15.1%;
-  height: 89%;
-  z-index: 5;
+  position: absolute;
+  /* border: 1px solid #494949; */
 
-  animation: fadeIn ease 3s;
-  -webkit-animation: fadeIn ease 3s;
-  -moz-animation: fadeIn ease 3s;
-  -o-animation: fadeIn ease 3s;
-  -ms-animation: fadeIn ease 3s;
-  -webkit-animation: fullscreen 0.5s forwards;
-  animation: fullscreen 0.5s forwards;
+  max-width: 84%;
+  margin-top: 0.5%;
+  margin-left: 0.8%;
+
+  max-height: 99%;
+  z-index: 4;
+
+  -webkit-animation: fullscreen 0.2s forwards;
+  animation: fullscreen 0.2s forwards;
 }
 
 .player {
+  grid-area: v;
   max-width: 100%;
   max-height: 100%;
 }
 
 .google {
-  border: 1px solid #494949;
+  grid-area: g;
+  /* border: 1px solid #494949; */
   width: fit-content;
   height: fit-content;
 
@@ -213,10 +217,11 @@ body {
 }
 
 .calendar {
+  grid-area: c;
   width: fit-content;
   height: fit-content;
 
-  border: 1px solid #242424;
+  /* border: 1px solid #242424; */
   padding: 5px;
 
   animation: fadeIn ease 3s;
@@ -227,27 +232,31 @@ body {
 }
 
 .news {
-  border: 1px solid #494949;
+  grid-area: n;
+  /* border: 1px solid #494949; */
   width: 336px;
   height: fit-content;
-
+  background-color: #1d1d1d;
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
   -moz-animation: fadeIn ease 3s;
   -o-animation: fadeIn ease 3s;
   -ms-animation: fadeIn ease 3s;
+  padding: 5px;
 }
 
 .command {
+  grid-area: co;
   border: 1px solid #494949;
   width: fit-content;
   height: fit-content;
+  font-size: 10px;
 
-  animation: fadeIn ease 3s;
-  -webkit-animation: fadeIn ease 3s;
-  -moz-animation: fadeIn ease 3s;
-  -o-animation: fadeIn ease 3s;
-  -ms-animation: fadeIn ease 3s;
+  animation: fadeIn ease 2;
+  -webkit-animation: fadeIn ease 2;
+  -moz-animation: fadeIn ease 2;
+  -o-animation: fadeIn ease 2;
+  -ms-animation: fadeIn ease 2;
 }
 
 .WeatherCards {
@@ -258,7 +267,7 @@ body {
   width: 20%;
   height: 400px;
   background-color: #ffffff;
-
+  z-index: 5;
   padding: 10px;
 }
 
@@ -278,7 +287,7 @@ body {
 .weatherDetail {
   top: 3%;
   position: absolute;
-  =display: flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -302,13 +311,27 @@ body {
 }
 
 .stocks {
+  grid-area: s;
   margin-left: 0%;
   position: absolute;
-  bottom: 110px;
+  bottom: 89px;
   height: fit-content;
   width: 83%;
   white-space: nowrap;
   z-index: 3;
+
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
+}
+
+.todo {
+  position: relative;
+  grid-area: to;
+  top: 18%;
+  z-index: 1;
 
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
