--- a/src/App.css
+++ b/src/App.css
@@ -157,12 +157,29 @@ body {
   -moz-animation: fadeIn ease 3s;
   -o-animation: fadeIn ease 3s;
   -ms-animation: fadeIn ease 3s;
+}
 
-  display: flex;
+.tflrows {
+  display: grid;
+  grid-template-columns: repeat(15, 6%);
+  white-space: nowrap;
+  padding: 3px;
+}
 
-  flex-direction: row;
-  flex-wrap: wrap;
-  text-align: left;
+.t1 {
+  grid-column: 1;
+}
+.t2 {
+  grid-column: 2/ 6;
+  /* margin-left: 0px; */
+}
+
+.t3 {
+  grid-column: 10/14;
+}
+
+.t4 {
+  grid-column: last;
 }
 
 .material-icons.check {
@@ -374,7 +391,7 @@ body {
 .divTableCell {
   display: table-cell;
   padding: 1px 1px;
-  text-align: left;
+  text-align: left !important;
 }
 .divTableHeading {
   display: table-header-group;
