--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ body {
   grid-row: 2;
   margin-left: 15px;
   white-space: pre-line;
-  font-size: 2vh;
+  font-size: 1.9vh;
   line-height: 1.8vh;
 }
 
@@ -129,19 +129,15 @@ body {
 .weather {
   grid-area: w;
   width: 99%;
+
   /* border: 1px solid #242424; */
   padding: 5px;
-
+  margin-top: 5%;
   animation: fadeIn ease 2s;
   -webkit-animation: fadeIn ease 2s;
   -moz-animation: fadeIn ease 2s;
   -o-animation: fadeIn ease 2s;
   -ms-animation: fadeIn ease 2s;
-
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  flex-wrap: wrap;
 }
 
 .tube {
@@ -166,6 +162,14 @@ body {
   padding: 3px;
 }
 
+.weatherTable {
+  display: grid;
+  grid-template-columns: repeat(15, 6%);
+
+  white-space: nowrap;
+  /* padding: 3px; */
+}
+
 .t1 {
   grid-column: 1;
 }
@@ -180,6 +184,23 @@ body {
 
 .t4 {
   grid-column: last;
+}
+
+.tw1 {
+  grid-column: 1;
+}
+.tw2 {
+  grid-column: 2/ 4;
+  margin-left: 5px;
+  /* margin-left: 0px; */
+}
+
+.tw3 {
+  grid-column: 5/10;
+}
+
+.tw4 {
+  grid-column: 14;
 }
 
 .material-icons.check {
@@ -202,7 +223,9 @@ body {
   /* padding: 5px; */
   /* border: 1px solid #494949; */
   width: 100%;
-  height: 100%;
+  height: 90%;
+  margin-top: 15%;
+
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
   -moz-animation: fadeIn ease 3s;
@@ -236,6 +259,7 @@ body {
   /* border: 1px solid #494949; */
   width: fit-content;
   height: fit-content;
+  margin-top: 10%;
 
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
@@ -251,7 +275,7 @@ body {
 
   /* border: 1px solid #242424; */
   padding: 5px;
-
+  margin-left: 2%;
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
   -moz-animation: fadeIn ease 3s;
@@ -358,7 +382,7 @@ body {
 .todo {
   position: relative;
   grid-area: to;
-  top: 18%;
+  top: 20%;
   z-index: 1;
 
   animation: fadeIn ease 3s;
