--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   /* max-height: 100vh;
   max-width: 100vh; */
   font-weight: bold;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #main {
@@ -92,21 +92,20 @@ body {
   max-width: 111vh;
   max-height: 92vh;
   grid-template-areas:
-    " . . . . . . . . . ."
-    " t t t t . . . . c c"
-    " t t t t . . . . c c"
-    " t t t t . . . . c c"
-    " . . . . v v v . c c"
-    " w w w w v v v . c c"
-    " w w w w v v v . c c"
-    " w w w w v v v . c c"
-    " w w w w v v v . . ."
-    " s s s s s s s s s s ";
+    " s s s s s s s s s s "
+    " w w w w t t t c c c"
+    " w w w w t t t c c c"
+    " w w w w t t t c c c"
+    " w w w w t t t c c c"
+    " n n n n . . . . . ."
+    " n n n n v v v v v v"
+    " n n n n v v v v v v"
+    " n n n n v v v v v v"
+    " . . . . . . . . . .";
 }
 
 .card {
   text-align: center;
-
   /* width: 50%; */
 
   text-align: center;
@@ -164,11 +163,23 @@ body {
   /* -webkit-box-shadow: 5px 5px 14px 1px rgba(255, 255, 255, 0.75);
   box-shadow: 5px 5px 14px 1px rgba(255, 255, 255, 0.75); */
 
-  /* animation: fadeIn ease 3s;
-  -webkit-animation: fadeIn ease 3s;
+  animation: fadeIn ease 3s;
+  /* -webkit-animation: fadeIn ease 3s;
   -moz-animation: fadeIn ease 3s;
   -o-animation: fadeIn ease 3s;
   -ms-animation: fadeIn ease 3s; */
+}
+
+.tflLogo {
+  position: relative;
+  left: 25%;
+}
+
+.tflback {
+  background-color: #ffffff;
+  width: 75%;
+  height: 8%;
+  margin-bottom: 3%;
 }
 
 .tflrows {
@@ -248,7 +259,7 @@ body {
   /* border: 1px solid #494949; */
   width: 100%;
   height: 90%;
-  margin-top: 15%;
+  margin-top: 5%;
 
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
@@ -266,10 +277,10 @@ body {
   margin-left: 0.8%;
 
   max-height: 99%;
-  z-index: 4;
+  z-index: 6;
 
-  -webkit-animation: fullscreen 0.2s forwards;
-  animation: fullscreen 0.2s forwards;
+  -webkit-animation: fullscreen 0.2s ease forwards;
+  animation: fullscreen 0.2s ease forwards;
 }
 
 .player {
@@ -294,13 +305,13 @@ body {
 
 .calendar {
   grid-area: c;
-  width: 98%;
+  width: fit-content;
   height: fit-content;
-  overflow: hidden;
+  /* overflow: hidden; */
 
   /* border: 1px solid #242424; */
-  padding: 5px;
-  margin-left: 2%;
+  /* padding: 5px; */
+  /* margin-left: 2%; */
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
   -moz-animation: fadeIn ease 3s;
@@ -309,20 +320,32 @@ body {
 }
 
 .fullcalendarin {
-  margin-top: 1.5%;
-  margin-left: 2%;
   position: absolute;
-  z-index: 5;
-  -webkit-animation: slide-in 2s forwards;
-  animation: slide-in 2s forwards;
+  z-index: 6;
+
+  animation: slide-in ease 2s forwards;
 }
 
 .fullcalendarout {
   position: absolute;
-  margin-top: 1.5%;
-  z-index: 5;
-  margin-left: 2%;
-  -webkit-animation: slide-out 2s forwards;
+
+  z-index: 6;
+
+  animation: slide-out ease 2s forwards;
+}
+
+.fullcalendarinb {
+  position: absolute;
+  z-index: 6;
+
+  animation: slide-in 2s forwards;
+}
+
+.fullcalendaroutb {
+  position: absolute;
+
+  z-index: 6;
+
   animation: slide-out 2s forwards;
 }
 
@@ -331,7 +354,7 @@ body {
   margin-left: 2%;
   margin-top: 50%;
   z-index: 5;
-  -webkit-animation: slide-in 2s forwards;
+
   animation: slide-in 2s forwards;
   z-index: 5;
 }
@@ -343,50 +366,71 @@ body {
   margin-top: 50%;
 }
 
-.newsin {
-  padding: 1.5%;
+.news {
+  background-color: #2e2e2e;
+
+  text-align: center;
+  color: #ffffff;
+  position: relative;
+  top: 15%;
+  grid-area: n;
+  max-width: 80%;
+  max-height: 80%;
+  animation: fadeIn ease 3s;
+  /* overflow: hidden; */
+}
+
+.news > h3 {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.news > img {
+  max-width: 100%;
+  max-height: 80%;
+}
+
+.newsfullin {
+  left: 30%;
   text-align: center;
   color: #000000;
   position: absolute;
-  /* border: 1px solid #494949; */
   background-color: #ffffff;
-  width: 40%;
-  /* margin-top: 20%;
-  margin-left: 10%; */
+  width: 37.5%;
   height: fit-content;
   top: 10%;
-  /* bottom: 10%; */
-  margin-left: 15%;
-
   max-height: 99%;
-  z-index: 5;
-
-  -webkit-animation: slide-in 1s forwards;
-  animation: slide-in 1s forwards;
+  z-index: 6;
+  border: 5px solid #242424;
+  animation: slide-in 2s ease forwards;
 }
 
-.tue:hover {
-  transform: rotateY(180deg);
-  transition: transform 2s;
-  transform-style: preserve-3d;
-  transform-origin: 30%;
+.newsfullImage {
+  position: relative;
+  right: 3%;
 }
 
-.newsout {
+.fadeLine {
+  position: relative;
+  border-top: 2px solid #1c6ea4;
+  height: 12%;
+  bottom: 0.5%;
+  z-index: 6;
+}
+
+.newsfullout {
+  left: 30%;
   text-align: center;
   color: #000000;
   position: absolute;
-  border: 1px solid #494949;
   background-color: #ffffff;
-  max-width: 50%;
-  margin-top: 0.5%;
-  margin-left: 0.8%;
-
+  width: 37.5%;
+  height: fit-content;
+  top: 10%;
   max-height: 99%;
-  z-index: 4;
-
-  -webkit-animation: slide-out 1s forwards;
-  animation: slide-out 1s forwards;
+  z-index: 6;
+  border: 5px solid #242424;
+  animation: slide-out 2s forwards;
 }
 
 .command {
@@ -411,7 +455,7 @@ body {
   width: 20%;
   height: 400px;
   background-color: #ffffff;
-  z-index: 5;
+  z-index: 6;
   padding: 10px;
 }
 
@@ -437,8 +481,8 @@ body {
   justify-content: center;
   width: 83%;
   margin: 0 auto;
-  -webkit-animation: slide-in 2s forwards;
-  animation: slide-in 2s forwards;
+  animation: slide-in 2s ease forwards;
+  z-index: 6;
 }
 
 .weatherDetailOut {
@@ -450,17 +494,18 @@ body {
   justify-content: center;
   width: 83%;
   margin: 0 auto;
-  -webkit-animation: slide-out 2s forwards;
-  animation: slide-out 2s forwards;
+  animation: slide-out 2s ease forwards;
+  z-index: 6;
 }
 
 .stocks {
   grid-area: s;
+  position: relative;
   margin-left: 0%;
-  position: absolute;
-  bottom: 13%;
+  /* position: absolute; */
+  top: 10%;
   height: fit-content;
-  width: 83%;
+  width: 105%;
   white-space: nowrap;
   z-index: 4;
 
@@ -566,54 +611,21 @@ body {
   }
 }
 
-@-webkit-keyframes slide-in {
-  0% {
-    left: 100%;
-  }
-  100% {
-    left: 15%;
-  }
-}
-
 @keyframes slide-in {
   0% {
-    left: 100%;
+    transform: translateX(200%);
   }
   100% {
-    left: 15%;
-  }
-}
-
-@-webkit-keyframes slide-out {
-  0% {
-    left: 15%;
-  }
-  100% {
-    left: 100%;
+    transform: translateX(0%);
   }
 }
 
 @keyframes slide-out {
   0% {
-    left: 15%;
+    transform: translateX(0%);
   }
   100% {
-    left: 100%;
-  }
-}
-
-@-webkit-keyframes fullscreen {
-  0% {
-    top: 50%;
-    left: 50%;
-    width: 0%;
-    height: 0%;
-  }
-  100% {
-    top: 0%;
-    left: 15.1%;
-    width: 84%;
-    height: 89%;
+    transform: translateX(200%);
   }
 }
 
@@ -629,15 +641,6 @@ body {
     left: 15.1%;
     width: 84%;
     height: 89%;
-  }
-}
-
-@-webkit-keyframes bounce-in {
-  0% {
-    top: 100%;
-  }
-  100% {
-    top: 15%;
   }
 }
 
